# quant

./: .gitignore  Makefile  README.md  pyproject.toml
artifacts/: README.md
curriculum/: README.md
curriculum/modules/: 00_beginner_preflight.md  01_market_basics.md  02_data_contracts.md  03_backtesting.md  04_risk_positioning.md  05_factor_research.md  06_portfolio.md  07_machine_learning.md  08_execution_review.md
data/: README.md
data/interim/: README.md
data/processed/: README.md
data/raw/: README.md
data/samples/: ohlcv_demo.csv
docs/: aggressive_quant_models_2026.md  beginner_mental_model.md  checklists.md  glossary.md  math_core.md  principles.md  progress_tracker.md  qlib_deep_dive.md  research_protocol.md  source_notes.md  study_plan.md  trade_review_template.md
experiments/qlib/: README.md
labs/: README.md
labs/00_beginner_preflight/: README.md
labs/01_returns_drawdown/: README.md
labs/02_data_bias_checks/: README.md
labs/03_backtest_delay_costs/: README.md
labs/04_position_sizing/: README.md
labs/05_factor_ic/: README.md
labs/06_portfolio/: README.md
labs/07_machine_learning/: README.md
labs/08_execution_review/: README.md
notebooks/: README.md
reports/: README.md
scripts/: check_markdown_links.py  check_notebook_boundaries.py  run_ruff.py
src/quant_learning/: __init__.py  backtest.py  data.py  factors.py  lessons.py  metrics.py  portfolio.py  risk.py  run_demo.py  strategy.py
tests/: test_data.py  test_factors.py  test_lessons.py  test_metrics.py  test_portfolio.py  test_risk.py  test_strategy_backtest.py
