[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-learning"
version = "0.1.0"
description = "A staged learning framework for quantitative trading research."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
research = [
    "numpy>=1.26",
    "pandas>=2.2",
    "matplotlib>=3.8",
    "scipy>=1.11",
    "statsmodels>=0.14",
    "scikit-learn>=1.4",
    "jupyterlab>=4.0",
]
backtesting = [
    "vectorbt>=0.28",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
quant-demo = "quant_learning.run_demo:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
